# DEPRECATED-PSoC5_VS_Creator

./: .gitignore  CMakeLists.txt  README.md
PSoC_Creator.cydsn/: PSoC_Creator.cycdx  PSoC_Creator.cydwr  PSoC_Creator.cyprj  PSoC_Creator.cyprj.Rolf  PSoC_Creator.cywrk  PSoC_Creator.cywrk.Rolf  PSoC_Creator.rpt  PSoC_Creator.svd  main.c
PSoC_Creator.cydsn/CortexM3/ARM_GCC_541/Debug/: Clock_1.lst  Cm3Start.lst  CyBootAsmGnu.lst  CyDmac.lst  CyFlash.lst  CyLib.lst  CySpc.lst  LINK_options.txt  P2_0.lst  P2_1.lst  P2_2.lst  P2_3.lst  P2_4.lst  P2_5.lst  P2_6.lst  P2_7.lst  PSoC_Creator.elf  PSoC_Creator.hex  PSoC_Creator.map  Pin_1.lst  SOURCE_ASM__ARM_GCC_GENERIC.txt  SOURCE_C__ARM_GCC_GENERIC.txt  Timer_1.lst  Timer_1_PM.lst  cyPm.lst  cy_em_eeprom.lst  cyfitter_cfg.lst  cymetadata.lst  cyutils.lst  library.deps  main.lst
PSoC_Creator.cydsn/CortexM3/ARM_GCC_541/Debug/.deps/: SOURCE_ASM__ARM_GCC_GENERIC.P  SOURCE_C__ARM_GCC_GENERIC.P
PSoC_Creator.cydsn/Export/: PSoCCreatorExportIDE.xml
PSoC_Creator.cydsn/Generated_Source/PSoC5/: Cm3RealView.scat  Cm3Start.c  P2_0.h  P2_0_aliases.h  P2_1_aliases.h  P2_2.c  P2_3.c  P2_4.c  P2_5.c  P2_5_aliases.h  P2_6_aliases.h  P2_7.c  P2_7_aliases.h  Pin_1.c  Pin_1.h  Pin_1_aliases.h  Timer_1_PM.c  config.hex  cyPm.c  cydevice.h  cydevicegnu_trm.inc  cydeviceiar.inc  cydeviceiar_trm.inc  cydevicerv.inc  cyfitter_cfg.c  cyfittergnu.inc  cyfitteriar.inc  cyfitterrv.inc
PSoC_Creator.cydsn/TopDesign/: TopDesign.cysch
PSoC_Creator.cydsn/codegentemp/: P2_0.c  P2_1.c  P2_1.h  P2_2.h  P2_2_aliases.h  P2_3.h  P2_3_aliases.h  P2_4.h  P2_4_aliases.h  P2_5.h  P2_6.c  P2_6.h  P2_7.h  PSoC_Creator.bvf  PSoC_Creator.ctl  PSoC_Creator.cyfit  PSoC_Creator.dsf  PSoC_Creator.pci  PSoC_Creator.pco  PSoC_Creator.route  PSoC_Creator.rt_log  PSoC_Creator.sdc  PSoC_Creator.sdf  PSoC_Creator.tr  PSoC_Creator.v  PSoC_Creator.vh2  PSoC_Creator.wde  PSoC_Creator_p.pco  PSoC_Creator_p.vh2  PSoC_Creator_r.vh2  PSoC_Creator_t.lib  PSoC_Creator_t.vh2  PSoC_Creator_timing.html  PSoC_Creator_u.sdc  Timer_1.c  Timer_1.h  bitstream.txt  cydevice_trm.h  cydevicegnu.inc  cydevicerv_trm.inc  (+8 more)
PSoC_Creator.cydsn/codegentemp/lcpsoc3/: index
config/: buildversion  common.cmake  cyelftool  memcalc.bash  power_off.jlink  power_on.jlink  psoc5_lpOLD.cfg
source/: cyapicallbacks.h  main.c
